--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">BitExchange</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">CoinTransfer</string>
+    <string name="login_screen">Auth2 LOGIN</string>
+    <string name="login_button">LOGIN</string>
 </resources>
